tests/paczka1/small_fuzzy/66380026.err
Error in line 3: LM35h A593 -2,1
Error in line 4: DfidFtAKnK S406 84,5
Error in line 6: IyOH5V91k S406 58,0
Error in line 1: LM35h A593 64,1
Error in line 14: IyOH5V91k A452 37,4
